ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: app-podinfo
  namespace: test
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 9898
        path: /podinfo/?(.*)
        pathType: Prefix
      - backend:
          service:
            name: backend
            port:
              number: 9898
        path: /(api/?.*)
        pathType: Prefix
